@@ -14,6 +14,7 @@ Improvements:
 
 Bug fixes:
  - apport-cli: Fix crash with non-ASCII characters in prompts.
+ - Fix "apport-bug symptomname" to actually work.
 
 1.9.1 (2009-09-22)
 ------------------
